--- a/app/home/static/css/main.css
+++ b/app/home/static/css/main.css
@@ -386,6 +386,12 @@ img.pull-left {
     }
 }
 
+/* student result */
 
-
- 
+.table-wrapper {
+	width: 700px;
+	margin: 30px auto;
+	background: #fff;
+	padding: 20px;	
+	box-shadow: 0 1px 1px rgba(0,0,0,.05);
+}
