--- a/app/subject_teacher/templates/pages/view-student-table/view-std.html
+++ b/app/subject_teacher/templates/pages/view-student-table/view-std.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/class_teacher_main.html' %}
+{% extends 'layouts/subject_teacherMain.html' %}
 
 {% block title %} Dashboard {% endblock title %}
 <!-- Specific CSS goes HERE -->
@@ -25,29 +25,9 @@
             <div class="col-12 grid-margin stretch-card">
                 <div class="card">
                     <div class="card-body">
-                        <h4 class="card-title">Add Student In Class</h4>
+                        <h4 class="card-title">Student List</h4>
                         <hr>
-                        <form action="" id="add_student" method="POST">
-                            <div class="row">
-                                <div class="col-sm-4 form-group">
-                                    <label>CID</label>
-                                    <input type="text" placeholder="Enter CID" class="form-control" name="cid" id="cid">
-                                </div>
-                                <div class="col-sm-4 form-group">
-                                    <label>Index Number</label>
-                                    <input type="text" placeholder="Enter Index Number" class="form-control"
-                                        name="index_num" id="index_num">
-                                </div>
-
-                                <div class="col-md-4 mt-2">
-                                    <br>
-
-                                    <button type="submit" id="add_std" class="btn btn-success" style="font-size:15px">
-                                        Search
-                                    </button> <br>
-                                </div>
-                            </div>
-                        </form>
+                       
                         <div class="card-body">
                             <div class="row">
                                 <div class="table-responsive">
@@ -63,50 +43,32 @@
                                                 <th scope="col">action</th>
                                             </tr>
                                         </thead>
-                                        <tbody class="list">
-
-                                            {% for std in user %}
+                                        <tbody class="list" id="class_std">
                                             <tr>
-                                                <th scope="row">
-                                                    {{ loop.index }}
-                                                </th>
-                                                <th scope="row">
-                                                    {{ std.index_number }}
-                                                </th>
-                                                <td class="budget">
-                                                    {{ std.student_cid}}
-                                                </td>
-                                                <td class="budget">
-                                                    {{ std.first_name }}
-                                                </td>
-                                                <td class="budget">
-                                                    {{ std.first_name }}
-                                                </td>
-                                                <td class="budget">
-                                                    {{ std.student_email }}
-                                                </td>
-                                                <td class="budget">
-                                                    {{ std.status }}
-                                                </td>
-
-                                                <td class="text-right">
-                                                    <div class="dropdown">
-                                                        <a class="btn btn-sm btn-icon-only text-light" href="#"
-                                                            role="button" data-toggle="dropdown" aria-haspopup="true"
-                                                            aria-expanded="false">
-                                                            <i class="fas fa-ellipsis-v"></i>
-                                                        </a>
-                                                        <div
-                                                            class="dropdown-menu dropdown-menu-right dropdown-menu-arrow">
-                                                            <a class="dropdown-item"
-                                                                href="/std-detials/{{ std.id }}">View</a>
-                                                            <a class="dropdown-item" href="javascript:void(0)"
-                                                                onclick="deleteUser('{{ std.id }}')">Delete</a>
-                                                        </div>
-                                                    </div>
-                                                </td>
+                                                <td>1 </td>
+                                                <td>00001</td>
+                                                <td>10715000332</td>
+                                                <td>Ugyen Dorji</td>
+                                                <td>Ugyen@gmail.com</td>
+                                                <td>approved</td>
+                                                <td> <a class="btn btn-sm btn-icon-only text-light" id="add_new_std" role="button" href="{{url_for('subject_teacher_blueprint.view_std_info')}}" style="background:orange">
+                                                    <b>View</b> </a></td>
+                                               
                                             </tr>
-                                            {% endfor %}
+                                            <tr>
+                                                <td>2 </td>
+                                                <td>00002</td>
+                                                <td>10715000321</td>
+                                                <td>pema Loday</td>
+                                                <td>pema@gmail.com</td>
+                                                <td>approved</td>
+                                                <td> <a class="btn btn-sm btn-icon-only text-light" id="add_new_std" role="button" style="background:orange">
+                                                    <b>View</b> </a></td>
+                                               
+                                            </tr>
+                                           
+                                           
+                                           
 
                                         </tbody>
                                     </table>
