--- a/app/class_teacher/templates/pages/add-student/student_list_class.html
+++ b/app/class_teacher/templates/pages/add-student/student_list_class.html
@@ -50,7 +50,7 @@
                                                 <td>Ugyen Dorji</td>
                                                 <td>Ugyen@gmail.com</td>
                                                 <td>approved</td>
-                                                <td> <a class="btn btn-sm btn-icon-only text-light" id="add_new_std" role="button" style="background:orange">
+                                                <td> <a class="btn btn-sm btn-icon-only text-light" id="add_new_std" role="button" href="{{url_for('class_teacher_blueprint.view_student_detail')}}" style="background:orange">
                                                     <b>View</b> </a></td>
                                                
                                             </tr>
