--- a/app/subject_teacher/templates/pages/view-student-table/std_detail.html
+++ b/app/subject_teacher/templates/pages/view-student-table/std_detail.html
@@ -63,7 +63,7 @@
                                         </div>
                                     </div>  
 		                        <div class="button-center">
-			                        <button type="submit" class="btn btn-sm btn-warning student_reg" style="color: white; width: 101px; height: 40px; font-size: 16px;">Submit</button>
+			                        <button type="submit" id="sub_sent" class="btn btn-sm btn-warning student_reg" style="color: white; width: 101px; height: 40px; font-size: 16px;">Submit</button>
 		                        </div>
                                 </div>
                             </div>
@@ -81,7 +81,20 @@
 
 <!-- Specific JS goes HERE -->
 {% block javascripts %}
-
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+		crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script>
+    $('#sub_sent').click(function(){
+        swal("Information successfully submitted", "Click Ok to continue", "success")
+                .then(function () {
+                    window.location = "/view-std-table"
+                })
+    })
+</script>
 {% endblock javascripts %}
 
 
