--- a/app/home/templates/partials/_navbarhome.html
+++ b/app/home/templates/partials/_navbarhome.html
@@ -12,7 +12,7 @@
 					<li><a href="about.html">About Us</a></li>
 					<li><a href="{{url_for('home_blueprint.studentFee')}}">Student Fees</a></li>
 					<li><a href="{{url_for('home_blueprint.trackapplication')}}">Track Student</a></li>
-					<li><a href="contact.html">Contact Us</a></li>
+					<li><a href="{{url_for('home_blueprint.contact')}}">Contact Us</a></li>
 					<li><a class="btn" href="{{url_for('home_blueprint.login')}}">Login</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
