--- a/app/home/templates/partials/_footerhome.html
+++ b/app/home/templates/partials/_footerhome.html
@@ -1,7 +1,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <footer id="footer" class="top-space">
-
+<div class="main-footer">
     <div class="footer1">
         <div class="container">
             <div class="row">
@@ -16,7 +16,7 @@
                      <p>Telephone No.: +975 05 584713</p>
 
                         <p>Tel. +975 2 584710<br>
-                            Fax. +975 2 584710 <br> <br><br>
+                            Fax. +975 2 584710 <br>
                             <p>E-mail:<a href="mailto:pk.ugyenacademy@education.gov.bt"> pk.ugyenacademy@education.gov.bt </a></p><br>
                             <br>
                             
@@ -40,7 +40,7 @@
                 <div class="col-md-5 widget">
                     <h3 class="widget-title">GOOGLE LOCATION</h3>
                     <div class="widget-body">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3537.300895949615!2d89.86898611429746!3d27.553170638859022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e1dd60fb314a25%3A0x11e7d76c7e8aa904!2zVWd5ZW4gQWNhZGVteSBIaWdoZXIgU2Vjb25kYXJ5IFNjaG9vbCDgvajgvbzgvIvgvaLgvpLgvrHgvZPgvIvgvaLgvbLgvYLgvIvgvZTgvaDgvbLgvIvgvZbgvrHgvbTgvYTgvIvgvYLgvZPgvabgvI0!5e0!3m2!1sen!2sbt!4v1651040203513!5m2!1sen!2sbt" width="460" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3537.300895949615!2d89.86898611429746!3d27.553170638859022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e1dd60fb314a25%3A0x11e7d76c7e8aa904!2zVWd5ZW4gQWNhZGVteSBIaWdoZXIgU2Vjb25kYXJ5IFNjaG9vbCDgvajgvbzgvIvgvaLgvpLgvrHgvZPgvIvgvaLgvbLgvYLgvIvgvZTgvaDgvbLgvIvgvZbgvrHgvbTgvYTgvIvgvYLgvZPgvabgvI0!5e0!3m2!1sen!2sbt!4v1651040203513!5m2!1sen!2sbt" width="450" height="200" style=" border: double;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                        </div>
                 </div>
 
@@ -62,6 +62,6 @@
             </div> <!-- /row of widgets -->
         </div>
     </div>
-
+</div>
 </footer>	
     
