--- a/app/subject_teacher/templates/subject_teacherDash.html
+++ b/app/subject_teacher/templates/subject_teacherDash.html
@@ -25,8 +25,8 @@
             <div class="col-md-12 grid-margin">
               <div class="row">
                 <div class="col-12 col-xl-8 mb-4 mb-xl-0">
-                  <h1 class="font-weight-bold"> སྐུ་གཟུགས་བཟང་པོ་ལགས།</h1> <br>
-                  <h5 class="font-weight-normal mb-0">WELCOME TO Subject TEACHER DASHBOARD</h5>
+                  <h1 class="font-weight-bold"> སྐུ་གཟུགས་བཟང་པོ་ལགས། </h1> <br>
+                  <h5 class="font-weight-normal mb-0">WELCOME TO SUBJECT TEACHER DASHBOARD</h5>
                 </div>
                 <div class="col-12 col-xl-4">
                  <div class="justify-content-end d-flex">
@@ -52,7 +52,7 @@
           <div class="row">
             <div class="col-md-6 grid-margin stretch-card">
               <div class="card tale-bg">
-                  <img src="../static/admin_images/dashboard/view.jpg" alt="iamge of ugyen academy">
+                  <img src="../static/admin_images/dashboard/helloYgyen.jpg" alt="image of ugyen academy">
                   <div class="weather-info">
                     <div class="d-flex">
                       <div class="ml-2">
