--- a/app/home/templates/contact_us.html
+++ b/app/home/templates/contact_us.html
@@ -4,7 +4,7 @@
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <link href="../static/vendor/formValidation/tachyons.min.css" type="text/css" rel="stylesheet" />
 <link href="../static/vendor/formValidation/formValidation.min.css" type="text/css" rel="stylesheet" />
 {% endblock stylesheets %}
@@ -18,7 +18,7 @@
 <hr> <br><br>
 <div class="container">
     <h1 class="header-title"> CONTACT US</h1>
-    <div class="col-sm-12" id="parent"> <br><br><br>
+    <div class="col-sm-12" id="parent"> <br><br>
         <div class="col-sm-7">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3537.300895949615!2d89.86898611429746!3d27.553170638859022!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39e1dd60fb314a25%3A0x11e7d76c7e8aa904!2zVWd5ZW4gQWNhZGVteSBIaWdoZXIgU2Vjb25kYXJ5IFNjaG9vbCDgvajgvbzgvIvgvaLgvpLgvrHgvZPgvIvgvaLgvbLgvYLgvIvgvZTgvaDgvbLgvIvgvZbgvrHgvbTgvYTgvIvgvYLgvZPgvabgvI0!5e0!3m2!1sen!2sbt!4v1651040203513!5m2!1sen!2sbt allowfullscreen"
@@ -51,7 +51,7 @@
             </form>
         </div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4"><br><br><br>
+    <div class="col-xs-12 col-sm-6 col-lg-4"><br><br>
         <div class="box">
             <div class="icon">
                 <div class="image"><i class="fa fa-envelope" aria-hidden="true"></i>
@@ -70,7 +70,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4"><br><br><br>
+    <div class="col-xs-12 col-sm-6 col-lg-4"><br><br>
         <div class="box">
             <div class="icon">
                 <div class="image"><i class="fa fa-mobile" aria-hidden="true"></i>
@@ -92,7 +92,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-lg-4"><br><br><br>
+    <div class="col-xs-12 col-sm-6 col-lg-4"><br><br>
         <div class="box">
             <div class="icon">
                 <div class="image"><i class="fa fa-map-marker" aria-hidden="true"></i>
@@ -152,7 +152,6 @@
             }
         });
     };
-
 </script>
 
 {% endblock javascripts %}
