--- a/app/subject_teacher/templates/layouts/subject_teacherMain.html
+++ b/app/subject_teacher/templates/layouts/subject_teacherMain.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Admin-Dashboard</title>
+    <title>Subject-Teacher-Dashboard</title>
     <!-- plugins:css -->
     <link rel="stylesheet" href="../static/admin_vendors/feather/feather.css">
     <link rel="stylesheet" href="../static/admin_vendors/ti-icons/css/themify-icons.css">
@@ -42,10 +42,7 @@
         </div>
         {% include "partials/_subject_footer.html" %}
     </div>
-   
-
-
-
+  
     <!-- Specific JS goes HERE -->
     {% block javascripts %}{% endblock javascripts %}
 
