--- a/app/subject_teacher/templates/pages/view-student-table/std_detail.html
+++ b/app/subject_teacher/templates/pages/view-student-table/std_detail.html
@@ -1,20 +1,15 @@
 {% extends 'layouts/subject_teacherMain.html' %}
-
 {% block title %} Student Management System {% endblock title %}
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css"
-    type="text/css" />
-<link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css"
-    type="text/css" />
+integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css"type="text/css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.4/css/bootstrap-datepicker.css" type="text/css" />
+<link href="../static/vendor/formValidation/tachyons.min.css" type="text/css" rel="stylesheet" />
+<link href="../static/vendor/formValidation/formValidation.min.css" type="text/css" rel="stylesheet" />
 {% endblock stylesheets %}
-
 {% block content %}
-
 <div class="main-panel">
     <div class="content-wrapper">
         <div class="row">
@@ -26,46 +21,54 @@
                         <div class="container register-form">
                             <div class="form">
                                 <div class="note">
-                                    <p>Enter the marks obtain by student in different fields :</p>
+                                    <p>Enter the marks obtain :</p>
                                 </div>
                                 <br>
+                                <form action="#" id="student_marks">
                                 <div class="form-content">
                                     <div class="row">
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label for="class_test">Class Test 01 :</label>
-                                                <input type="text" class="form-control" placeholder="Enter Marks*" value=""/>
+                                                <input type="text" class="form-control" name="classtest1" placeholder="Enter Marks*" value=""/>
                                             </div>
                                             <div class="form-group">
                                                 <label for="class_test">Continuous Assessment :</label>
-                                                <input type="text" class="form-control" placeholder="Enter CA*" value=""/>
+                                                <input type="text" class="form-control" name="ca" placeholder="Enter CA*" value=""/>
                                             </div>
                                         </div>
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label for="lname">Mid-Term Marks :</label>
-                                                <input type="text" class="form-control" placeholder="Mid-term marks*" value=""/>
+                                                <input type="text" class="form-control" name="midterm" placeholder="Mid-term marks*" value=""/>
                                             </div>
                                             <div class="form-group">
                                                 <label for="lname">Annual Exam :</label>
-                                                <input type="text" class="form-control" placeholder="Annual Exam Marks*" value=""/>
+                                                <input type="text" class="form-control" name="annualexam" placeholder="Annual Exam Marks*" value=""/>
                                             </div>
                                         </div>
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label for="class_test">Class Test 02 :</label>
-                                                <input type="text" class="form-control" placeholder="Enter Marks*" value=""/>
+                                                <input type="text" class="form-control" name="classtest2" placeholder="Enter Marks*" value=""/>
                                             </div>
                                             <div class="form-group">
                                                 <label for="CA">Status :</label>
-                                                <input type="status" class="form-control" placeholder="Enter Pass/Fail*" value=""/>
+                                                <input type="status" class="form-control" name="status" placeholder="Enter Pass/Fail*" value=""/>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-4">
+                                            <div class="form-group">
+                                                <label for="class_test">Remarks:</label>
+                                                <input type="text" class="form-control" name="remarks" placeholder="submit your remarks*" value=""/>
                                             </div>
                                         </div>
                                     </div>  
-		                        <div class="button-center">
-			                        <button type="submit" id="sub_sent" class="btn btn-sm btn-warning student_reg" style="color: white; width: 101px; height: 40px; font-size: 16px;">Submit</button>
-		                        </div>
+		                             <div class="button-center">
+			                             <button type="submit" id="sub_sent" class="btn btn-sm btn-warning student_reg" style="color: white; width: 101px; height: 40px; font-size: 16px;">Submit</button>
+		                            </div>
                                 </div>
+                               </form>
                             </div>
                         </div>
                     </div>
@@ -74,25 +77,49 @@
         </div>
     </div>
 </div>
-
-
-
 {% endblock content %}
-
 <!-- Specific JS goes HERE -->
 {% block javascripts %}
+
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-		integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-		crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+<script src="../static/vendor/formValidation/es6-shim.min.js"></script>
+<script src="../static/vendor/formValidation/formValidation.min.js"></script>
+<script src="../static/vendor/formValidation/Bootstrap.min.js"></script>
+<script src="../static/vendor/formValidation/Tachyons.min.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+<script src="../static/js/contact_vilidation.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
 <script>
-    $('#sub_sent').click(function(){
-        swal("Information successfully submitted", "Click Ok to continue", "success")
-                .then(function () {
-                    window.location = "/view-std-table"
-                })
-    })
+    function contactDetail() {
+        var form = document.getElementById("student_marks");
+        var data = new FormData(form);
+        $.ajax({
+            type: 'POST',
+            url: '/store-marks-detail',
+            data: data,
+            processData: false,
+            contentType: false,
+            cache: false,
+
+            success: function (res) {
+                swal("Information successfully submitted", "Click Ok to continue", "success")
+                    .then(function () {
+                        window.location = ""
+                    })
+            },
+            error: function () {
+                swal("Infomation submission failed", "Click Ok to continue", "error")
+                    .then(function () {
+                        window.location = ""
+                    })
+            }
+        });
+    };
+
 </script>
 {% endblock javascripts %}
